:memo: & :sparkles: | add creation power
